# task_perception

./: .ycm_extra_conf.py  CMakeLists.txt  README.md  package.xml
action/: RecordVideo.action
config/: contact_detection.yaml  grasp_planner.yaml  task_perception.rviz
frontend/: README.md  bower.json  index.html
frontend/src/: pbi-annotator.html  pbi-app.html  pbi-event.html  pbi-recorder.html  shared-styles.html
include/task_perception/: annotator_server.h  bag_utils.h  camera_info_camera_provider.h  contact_detection.h  database.h  default_skeleton.h  demo_model.h  demo_runtime.h  demo_visualizer.h  grasp_planner.h  imitation_generator.h  multi_object_tracker.h  names.h  object_tracker.h  particle_tracker_builder.h  pcl_typedefs.h  pcl_utils.h  pr2_gripper_model.h  record_video_action_server.h  ros_utils.h  skeleton_services.h  task_perception_context.h  track.h  video_scrubber.h
launch/: process_bag.launch  record_demonstration.launch  task_perception.launch
msg/: AnnotatorEvent.msg  AnnotatorState.msg  DemoState.msg  Demonstration.msg  Event.msg  HandState.msg  ObjectState.msg
src/: annotator_node.cpp  annotator_server.cpp  bag_utils.cpp  camera_info_camera_provider.cpp  contact_detection.cpp  database.cpp  default_skeleton.cpp  demo_model.cpp  demo_runtime.cpp  demo_visualizer.cpp  grasp_planner.cpp  imitation_generator.cpp  object_tracker.cpp  particle_tracker_builder.cpp  pcl_utils.cpp  pose_utils.cpp  pr2_gripper_model.cpp  process_bag_main.cpp  record_video_action_server.cpp  ros_utils.cpp  task_perception_context.cpp  track.cpp  video_scrubber.cpp
task_db/: CMakeLists.txt  package.xml
task_db/include/task_db/: demo_states_db.h
task_db/src/: demo_states_db.cpp  demo_states_db_node.cpp
task_imitation/: CMakeLists.txt  package.xml
task_imitation/config/: grasp_planner.yaml  imitation.rviz  imitation.yaml  surface_segmentation.yaml
task_imitation/include/task_imitation/: bimanual_manipulation.h  collision_checker.h  demo_state.h  grasp_planner.h  grasp_planning_context.h  hand_state_machine.h  ik.h  motion_planning.h  obb.h  object_initialization.h  program_constants.h  program_executor.h  program_generator.h  program_iterator.h  program_planner.h  program_segment.h  program_server.h  program_slice.h  program_step.h  typed_pose.h
task_imitation/launch/: dbot.launch  pr2_moveit.launch  pr2_planning_context.launch  pr2_sim.launch  rosbridge_websocket_local.launch  task_imitation.launch
task_imitation/scripts/: logreg.py  parse_grasp_evals.py  test_imitation.py
task_imitation/src/: bimanual_manipulation.cpp  collision_checker.cpp  demo_state.cpp  grasp_planner.cpp  grasp_planning_context.cpp  hand_state_machine.cpp  ik.cpp  motion_planning.cpp  object_initialization.cpp  program_execution_node.cpp  program_executor.cpp  program_generator.cpp  program_generator_node.cpp  program_iterator.cpp  program_planner.cpp  program_server.cpp  program_server_node.cpp  program_slice.cpp  program_step.cpp
task_imitation/test/: bimanual_manipulation_test.cpp  program_executor.test  program_executor_test.cpp  program_slice_test.cpp
task_perception/: CMakeLists.txt  package.xml
task_perception/config/: camera.yaml  contact_detection.yaml  grasp_planner.yaml  object.yaml  particle_tracker.yaml  record_demonstration.rviz  task_perception.rviz
task_perception/frontend/: index.html  manifest.json
task_perception/frontend/src/: pbi-annotator.html  pbi-app.html  pbi-event.html  pbi-hand-state.html  pbi-imitation.html  pbi-object-state.html  pbi-slice.html  pbi-step.html  shared-styles.html
task_perception/frontend/test/pbi-app/: pbi-app_test.html
task_perception/include/task_perception/: annotator_server.h  contact_detection.h  database.h  demo_runtime.h  demo_visualizer.h  lazy_object_model.h  multi_object_tracker.h  names.h  object_model_cache.h  pcl_utils.h  pose_utils.h  pr2_gripper_model.h  record_video_action_server.h  shape_detection.h  task_perception_context.h  video_scrubber.h
task_perception/launch/: dbot_nerf.launch  process_bag.launch  record_demonstration.launch  task_perception.launch  upload_pr2.launch  xtion_tripod.launch
task_perception/src/: annotator_node.cpp  annotator_server.cpp  contact_detection.cpp  database.cpp  default_skeleton.cpp  demo_model.cpp  demo_runtime.cpp  demo_visualizer.cpp  grasp_planner.cpp  imitation_generator.cpp  lazy_object_model.cpp  multi_object_tracker.cpp  pcl_utils.cpp  pr2_gripper_model.cpp  process_bag_main.cpp  shape_detection.cpp  task_perception_context.cpp
task_perception_msgs/: CMakeLists.txt  package.xml
task_perception_msgs/action/: GenerateProgram.action  ImitateDemo.action
task_perception_msgs/msg/: AnnotatorEvent.msg  DemoState.msg  DemoStates.msg  Event.msg  HandState.msg  ImitationEvent.msg  ObjectState.msg  Program.msg  ProgramSlice.msg  ProgramSlices.msg  Step.msg
task_perception_msgs/srv/: GetDemoStates.srv
task_utils/: CMakeLists.txt  package.xml
task_utils/include/task_utils/: bag_utils.h  pr2_gripper_viz.h  ros_params.h
task_utils/scripts/: queries.py  upgrade_db_msgs.py
task_utils/src/: bag_utils.cpp  pr2_gripper_viz.cpp  ros_params.cpp
